Implementation of logger and saving logs logic.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,15 +27,19 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-logging:3.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation("org.flywaydb:flyway-core:11.11.2")
-	runtimeOnly("org.flywaydb:flyway-database-postgresql:11.11.2")
+	implementation 'org.flywaydb:flyway-core:11.11.2'
+	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.testcontainers:postgresql:1.21.3'
+	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
+	testImplementation 'org.assertj:assertj-core:3.26.3'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
