--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,3 +1,5 @@
+POSTGRES_DB_HOST=your_db_host
+POSTHRES_DB_PORT=your_db_port
 POSTGRES_DB=your_db
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_pass
