--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-logging:3.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
 	implementation 'org.flywaydb:flyway-core:11.11.2'
 	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
 	compileOnly 'org.projectlombok:lombok'
