Implementation of core functionality for OpenAIAPI, now messages are sent as prompt and the response is saved as another message. With unit tests.

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -3,3 +3,5 @@ POSTHRES_DB_PORT=your_db_port
 POSTGRES_DB=your_db
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_pass
+
+OPENAI_API_KEY=your_api_key
