--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,18 +29,28 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-logging:3.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.json:json:20250517'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
+	implementation 'org.springframework:spring-webflux:6.2.10'
 	implementation 'org.flywaydb:flyway-core:11.11.2'
-	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
-	compileOnly 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	compileOnly 'org.projectlombok:lombok'
+
+	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
 	runtimeOnly 'org.postgresql:postgresql'
+
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.testcontainers:postgresql:1.21.3'
 	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
 	testImplementation 'org.assertj:assertj-core:3.26.3'
+	testImplementation 'com.github.tomakehurst:wiremock-standalone:3.0.1'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
