--- a/.env.dev.example
+++ b/.env.dev.example
@@ -3,5 +3,5 @@ POSTHRES_DB_PORT=your_db_port
 POSTGRES_DB=your_db
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_pass
-
 OPENAI_API_KEY=your_api_key
+DISCORD_BOT_TOKEN=your_discord_bot_token
