--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -12,6 +12,9 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: true
 server:
   port: 8080
 openai:
