Code refactor, added new expections, removed reacitivty.

--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -22,6 +22,7 @@ openai:
   base-url: https://api.openai.com/v1
   model: gpt-4o-mini
   max-tokens: 100
+  chatCompletionsEndpoint: /chat/completions
 discord:
   bot-token: ${DISCORD_BOT_TOKEN}
   bot-prefix: "!ai "
