--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,10 +29,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-logging:3.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework:spring-webflux:6.2.10'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.5'
+	implementation 'org.springframework:spring-web:6.2.10'
 	implementation 'org.flywaydb:flyway-core:11.11.2'
 	implementation 'com.discord4j:discord4j-core:3.3.0-RC3'
 	implementation 'io.projectreactor:reactor-core:3.7.9'
+	implementation 'org.springframework:spring-aspects:7.0.0-M8'
+	implementation 'org.springframework.retry:spring-retry:2.0.12'
 	implementation('org.json:json:20250517') {
 		exclude group: 'com.vaadin.external.google', module: 'android-json'
 	}
@@ -58,6 +61,7 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test:3.7.9'
 	testImplementation 'org.mockito:mockito-core:5.19.0'
 	testImplementation 'org.mockito:mockito-junit-jupiter:5.19.0'
+	testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.7'
 	testImplementation 'com.h2database:h2:2.3.232'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -65,4 +69,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }}"
 }
