--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -18,6 +18,7 @@ openai:
   base-url: http://localhost:8089
   model: gpt-4o-mini
   max-tokens: 100
+  chatCompletionsEndpoint: /chat/completions
 discord:
   bot-token: "test-token"
   bot-prefix: "!ai "
