JWT authentication implementation for user

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -5,3 +5,5 @@ POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_pass
 OPENAI_API_KEY=your_api_key
 DISCORD_BOT_TOKEN=your_discord_bot_token
+JWT_SECRET=your_secure_secret_key_here_at_least_32_characters_long
+JWT_EXPIRATION_MS=jwt_expiration_in_ms
