--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,12 +36,14 @@ dependencies {
 	implementation 'io.projectreactor:reactor-core:3.7.9'
 	implementation 'org.springframework:spring-aspects:7.0.0-M8'
 	implementation 'org.springframework.retry:spring-retry:2.0.12'
+	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
 	implementation('org.json:json:20250517') {
 		exclude group: 'com.vaadin.external.google', module: 'android-json'
 	}
 	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12') {
 		exclude group: 'com.vaadin.external.google', module: 'android-json'
 	}
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -49,6 +51,8 @@ dependencies {
 
 	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
 	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
 
 	annotationProcessor 'org.projectlombok:lombok'
 
