--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -29,3 +29,6 @@ discord:
   bot-token: ${DISCORD_BOT_TOKEN}
   bot-prefix: "!ai "
   bot-enabled: true
+jwt:
+  secret: ${JWT_SECRET}
+  expirationMs: ${JWT_EXPIRATION_MS}
