Added refresh token and token rotation

--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -30,3 +30,4 @@ discord:
 jwt:
   secret: ${JWT_SECRET}
   expirationMs: ${JWT_EXPIRATION_MS}
+  refreshExpirationDays: ${JWT_REFRESH_EXPIRATION_DAYS}
