--- a/.env.dev.example
+++ b/.env.dev.example
@@ -7,3 +7,4 @@ OPENAI_API_KEY=your_api_key
 DISCORD_BOT_TOKEN=your_discord_bot_token
 JWT_SECRET=your_secure_secret_key_here_at_least_32_characters_long
 JWT_EXPIRATION_MS=jwt_expiration_in_ms
+JWT_REFRESH_EXPIRATION_DAYS=jwt_refresh_token_expiration_in_days
