--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -32,3 +32,4 @@ discord:
 jwt:
   secret: ${JWT_SECRET}
   expirationMs: ${JWT_EXPIRATION_MS}
+  refreshExpirationDays: ${JWT_REFRESH_EXPIRATION_DAYS}
