Added actuator with health and metrics endpoints with security authorization.

--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -19,6 +19,14 @@ spring:
       fail-on-unknown-properties: true
 server:
   port: 8080
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
+  endpoint:
+    health:
+      show-details: always
 openai:
   api-key: ${OPENAI_API_KEY}
   base-url: https://api.openai.com/v1
