--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -32,6 +32,6 @@ discord:
   bot-prefix: "!ai "
   bot-enabled: false
 jwt:
-  secret: "test-secret"
-  expirationMs: 360000
+  secret: "dGhpc2lzYXZlcnlsb25nc2VjcmV0a2V5Zm9yc2lnbmluZ2p3dHRva2Vucw=="
+  expirationMs: 3600000
   refreshExpirationDays: 1
