Implementation of discord message entity and code refactor for makin discord bot independent from user. Added BaseMessage abstract for mesasge entities

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -3,8 +3,14 @@ POSTHRES_DB_PORT=your_db_port
 POSTGRES_DB=your_db
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_pass
+
 OPENAI_API_KEY=your_api_key
+MAX_TOKENS_OPEN_AI=max_tokens
+
 DISCORD_BOT_TOKEN=your_discord_bot_token
+OPENAI_API_KEY_FOR_DISCORD=your_api_key
+MAX_TOKENS_OPEN_AI_FOR_DISCORD=max_tokens
+
 JWT_SECRET=your_secure_secret_key_here_at_least_32_characters_long
 JWT_EXPIRATION_MS=jwt_expiration_in_ms
 JWT_REFRESH_EXPIRATION_DAYS=jwt_refresh_token_expiration_in_days
