Fixed tests for changes before.
s

s

(cherry picked from commit 2c2b2c9d317ef9e106bda9e48e3bbe9ea61dd4a0)

s

--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -36,5 +36,5 @@ jwt:
   expirationMs: 3600000
   refreshExpirationDays: 1
 encryption:
-  key: test-key
-  salt: salt
+  key: testkey12312321
+  salt: deadbeef12345678
