Added openai model to UserEntity, removed application.* model field from openai section and created it in discord section. Improved of OpenAIServiceException validation handling and implementation/rework of tests for functionalities depends on openaiservice. Added flyway for database changes.

--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -27,11 +27,11 @@ management:
       show-details: when-authorized
 openai:
   base-url: https://api.openai.com/v1
-  model: gpt-4o-mini
   chatCompletionsEndpoint: /chat/completions
 discord:
   api-key: ${OPENAI_API_KEY_FOR_DISCORD}
   max-tokens: ${MAX_TOKENS_OPEN_AI_FOR_DISCORD}
+  open-ai-model: ${OPEN_AI_MODEL_FOR_DISCORD}
   bot-token: ${DISCORD_BOT_TOKEN}
   bot-prefix: "!ai "
   bot-enabled: true
