--- a/.env.dev.example
+++ b/.env.dev.example
@@ -6,6 +6,7 @@ POSTGRES_PASSWORD=your_pass
 
 DISCORD_BOT_TOKEN=your_discord_bot_token
 OPENAI_API_KEY_FOR_DISCORD=your_api_key
+OPEN_AI_MODEL_FOR_DISCORD=your_open_ai_model
 MAX_TOKENS_OPEN_AI_FOR_DISCORD=max_tokens
 
 JWT_SECRET=your_secure_secret_key_here_at_least_32_characters_long
