--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -23,11 +23,11 @@ management:
       access: unrestricted
 openai:
   base-url: http://localhost:8089
-  model: gpt-4o-mini
   chatCompletionsEndpoint: /chat/completions
 discord:
   api-key: test-key
   max-tokens: 100
+  open-ai-model: test-model
   bot-token: "test-token"
   bot-prefix: "!ai "
   bot-enabled: false
