--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -44,3 +44,10 @@ jwt:
 encryption:
   key: ${ENCRYPTION_KEY}
   salt: ${SALT}
+resilience4j:
+  ratelimiter:
+    instances:
+      refreshToken:
+        limitForPeriod: 10
+        limitRefreshPeriod: 60s
+        timeoutDuration: 1s
