--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -42,4 +42,10 @@ jwt:
 encryption:
   key: ${ENCRYPTION_KEY}
   salt: ${SALT}
-
+resilience4j:
+  ratelimiter:
+    instances:
+      refreshToken:
+        limitForPeriod: 10
+        limitRefreshPeriod: 60s
+        timeoutDuration: 1s
