--- a/backend/src/test/resources/application-test.yaml
+++ b/backend/src/test/resources/application-test.yaml
@@ -38,3 +38,10 @@ jwt:
 encryption:
   key: testkey12312321
   salt: deadbeef12345678
+resilience4j:
+  ratelimiter:
+    instances:
+      refreshToken:
+        limitForPeriod: 10
+        limitRefreshPeriod: 60s
+        timeoutDuration: 1s
