Frontend (Vite + React) initial commit with home page to check backend health and auth/me endpoint functionality. Added CORS bean and configuration to SecurityConfig

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Custom project files
+# Project custom files
 .env.dev
 logs/
+node_modules/
 
 # Backend (Java, Spring, Gradle, Docker, InteliJ) & Frontend
 
