Created dockerfile for frontend, configured docker-compose to run database, backend, and frotnend.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,25 @@
+# Build
 FROM gradle:8.10-jdk21 AS builder
 WORKDIR /app
 
-COPY build.gradle settings.gradle gradle.properties ./
+COPY gradlew gradlew.bat settings.gradle build.gradle ./
+COPY gradle ./gradle
 COPY src ./src
 
-# Build jar without tests
-RUN gradle clean build -x test --no-daemon
+RUN ./gradlew clean build -x test --no-daemon
 
+# Run
 FROM openjdk:21-jdk-slim
 WORKDIR /app
+
+# Install curl for healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/build/libs/*.jar app.jar
 
 EXPOSE 8080
 
-# Run the application with preview features enabled
+HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
+
 ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
