Added docker-compose-prod.yaml, ci.yaml and changed name of docker-compose.yaml to docker-compose-dev.yaml. Added github secrets for production.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,4 +22,4 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
   CMD curl -f http://localhost:8080/actuator/health || exit 1
 
-ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-dev}", "-jar", "app.jar"]
