--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -34,17 +34,20 @@ services:
     restart: unless-stopped              # Restart unless manually stopped
     env_file:
       - .env.dev                         # Load env variables from .env.dev
+    environment:
+        SPRING_PROFILES_ACTIVE: dev       # Use application-dev.yaml locally
+        POSTGRES_DB_HOST: db
     ports:
       - "8080:8080"                      # Map host port to container port
     depends_on:
       db:
         condition: service_healthy       # Wait for database to be healthy
     healthcheck:                         # Check backend readiness
-        test: ["CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1"] # Verify health endpoint
-        interval: 30s                      # Check every 30 seconds
-        timeout: 5s                        # Timeout after 5 seconds
-        retries: 3                         # Retry 3 times
-        start_period: 30s                  # Wait 30s before checks
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1"] # Verify health endpoint
+      interval: 30s                      # Check every 30 seconds
+      timeout: 5s                        # Timeout after 5 seconds
+      retries: 3                         # Retry 3 times
+      start_period: 30s                  # Wait 30s before checks
     deploy:
       resources:                         # Limit container resources
         limits:
@@ -55,8 +58,6 @@ services:
           memory: 512M                   # Reserve 512MB RAM
     networks:
       - app-network                     # Use custom network
-    environment:
-        POSTGRES_DB_HOST: db  
 
   frontend:                             # Frontend service
     build:
