--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          cache-to: type=gha,mode=max
+          cache-from: type=gha
       - name: Build and run containers
         run: docker compose -f docker-compose-prod.yaml up --build -d
         env:
@@ -31,5 +35,17 @@ jobs:
           SALT: ${{ secrets.SALT }}
       - name: Run backend tests
         run: docker exec aichatbridge-backend ./gradlew test
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push images
+        run: |
+          docker tag aichatbridge-backend ghcr.io/${{ github.repository }}/aichatbridge-backend:latest
+          docker tag aichatbridge-frontend ghcr.io/${{ github.repository }}/aichatbridge-frontend:latest
+          docker push ghcr.io/${{ github.repository }}/aichatbridge-backend:latest
+          docker push ghcr.io/${{ github.repository }}/aichatbridge-frontend:latest
       - name: Stop containers
         run: docker compose -f docker-compose-prod.yaml down
