Fixing github actions building errors
squash

squash 2

squash 3

squash 4

squash 5

squash 6

test

test fix

test fix 3

push images 1

push images fix 2

idk

Revert "idk"

This reverts commit 4cb342abaf235dba589f2d9a7225f2d173ec4cf8.

asdsasdasasdasdsadsa

cant stand it

tesst

s

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,9 @@ COPY gradlew gradlew.bat settings.gradle build.gradle ./
 COPY gradle ./gradle
 COPY src ./src
 
+# Add execute permissions to gradlew
+RUN chmod +x ./gradlew
+
 RUN ./gradlew clean build -x test --no-daemon
 
 # Run
